[gd_scene load_steps=2 format=3 uid="uid://test_quest_manager"]

[ext_resource type="Script" path="res://scripts/test/test_quest_manager.gd" id="1_test"]

[node name="TestQuestManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.18, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "任务系统测试"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "状态: 等待测试..."
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="LoadDailyBtn" type="Button" parent="VBoxContainer/ButtonGrid"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "加载日常任务"

[node name="LoadWeeklyBtn" type="Button" parent="VBoxContainer/ButtonGrid"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "加载周常任务"

[node name="LoadAchievementBtn" type="Button" parent="VBoxContainer/ButtonGrid"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "加载成就任务"

[node name="SimulateHarvestBtn" type="Button" parent="VBoxContainer/ButtonGrid"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "模拟收获作物"

[node name="SimulateEnergyBtn" type="Button" parent="VBoxContainer/ButtonGrid"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "模拟获得能量 (+50)"

[node name="SimulateFlowBtn" type="Button" parent="VBoxContainer/ButtonGrid"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "模拟进入心流"

[node name="SimulateCodingBtn" type="Button" parent="VBoxContainer/ButtonGrid"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "模拟编码 30 分钟"

[node name="OpenQuestPanelBtn" type="Button" parent="VBoxContainer/ButtonGrid"]
custom_minimum_size = Vector2(280, 40)
layout_mode = 2
text = "打开任务面板"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="QuestListLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "任务列表:"

[node name="QuestList" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "点击按钮加载任务..."
scroll_following = true

[node name="QuestPanel" parent="." instance_placeholder="res://scenes/ui/quest/quest_panel.tscn"]
visible = false
layout_mode = 1
